added ipsum lorem text, finished adding grid to header

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
   height: 27px;
 
   font-size: 16px;
-  font-weight: 900;
+  font-weight: 500;
   text-decoration: none;
 }
 
@@ -72,6 +72,98 @@ a>span {
 .right-container {
   display: grid;
   grid-template-rows: 1fr 4fr;
+}
+
+.top-row {
+  display: grid;
+
+  grid-template-columns: 1fr 8fr 1fr 1fr 2fr;
+}
+
+label>span {
+  position: relative;
+  left: 50%;
+  top: 11px;
+}
+
+input {
+  margin-top: 12px;
+  padding-left: 8px;
+  background-color: rgb(214, 234, 241);
+  border: none;
+  border-radius: 40px;
+  height: 1.5rem;
+  width: 90%;
+}
+
+.material-icons-outlined.md-18 { 
+  font-size: 22px; 
+  font-weight: 200;
+
+  position: relative;
+  top: 11px;
+  left: 85%;
+}
+
+img#small{
+  width: 35px;
+  border-radius: 50px;
+
+  margin-top: 5px;
+  margin-left: 33px;
+}
+
+.name.small {
+  font-size: 18px;
+  font-weight: 600;
+
+  margin-top: 11px;
+}
+
+.bot-row {
+  padding-right: 50px;
+
+  display: grid;
+  grid-template-columns: 2fr 6fr 1fr 1fr 1fr;
+  column-gap: 20px;
+}
+
+img#med{
+  width: 80px;
+  border-radius: 50px;
+
+  position: relative;
+  left: 30%;
+  top: 15px;
+}
+
+.intro-words{
+  position: relative;
+  top: 40px;
+}
+
+.hi-there{
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.name-large{
+  font-size: 24px;
+  font-weight: 600;
+}
+
+button {
+  height: 36px;
+  width: 100px;
+  border: none;
+  border-radius: 20px;
+  background-color: rgb(95, 151, 170);
+  color: white;
+  font-size: 14px;
+  font-weight: 600;
+
+  position: relative;
+  top: 55px;
 }
 
 .content-container{
@@ -96,15 +188,31 @@ a>span {
   grid-template-rows: repeat(3, 180px);
   gap: 20px;
 }
-
-
-.card{
-  border: 1px solid;
-  border-radius: 7px;
+h1{
+  font-size: 22px;
 }
 
+.card{
+  background-color: rgba(255, 255, 255, 0.80);
+  border: none;
+  border-radius: 7px;
+
+  padding: 15px;
+}
+
+h2{
+  font-size: 16px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+}
+
+.card-words{
+  color: rgb(155, 154, 154);
+  font-size: 14px;
+}
+
+
 .card-squished{
-  /* border: 1px solid; */
   height: 70px;
 }
 
@@ -114,6 +222,8 @@ a>span {
 }
 
 .announce-container, .trending-container{
+  background-color: rgba(255, 255, 255, 0.50);
+
   border: 1px solid;
   border-radius: 7px;
 }
