--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@
   text-decoration: none;
 }
 
-a:visited {
+.menu>a:visited {
   color: white;
 }
 
@@ -78,21 +78,23 @@ a>span {
   display: grid;
 
   grid-template-columns: 1fr 8fr 1fr 1fr 2fr;
+  grid-template-rows: 50px;
+
+  align-items: end;
 }
 
 label>span {
   position: relative;
   left: 50%;
-  top: 11px;
 }
 
 input {
-  margin-top: 12px;
+  margin-top: 25px;
   padding-left: 8px;
   background-color: rgb(214, 234, 241);
   border: none;
   border-radius: 40px;
-  height: 1.5rem;
+  height: 2rem;
   width: 90%;
 }
 
@@ -101,16 +103,16 @@ input {
   font-weight: 200;
 
   position: relative;
-  top: 11px;
   left: 85%;
 }
 
 img#small{
-  width: 35px;
-  border-radius: 50px;
+  width: 40px;
+  border-radius: 50%;
 
-  margin-top: 5px;
-  margin-left: 33px;
+  position: relative;
+  left: 35%;
+  top: 10px;
 }
 
 .name.small {
@@ -124,17 +126,17 @@ img#small{
   padding-right: 50px;
 
   display: grid;
-  grid-template-columns: 2fr 6fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 6fr 1fr 1fr 1fr;
   column-gap: 20px;
 }
 
 img#med{
-  width: 80px;
+  width: 70px;
   border-radius: 50px;
 
   position: relative;
   left: 30%;
-  top: 15px;
+  top: 25px;
 }
 
 .intro-words{
@@ -176,28 +178,36 @@ button {
 }
 
 .first-row{
+  padding-top: 20px;
+
   grid-column: 1 / -1;
 
   display: grid;
   grid-template-columns: 2fr 1fr;
 }
 
+#second{
+  padding-left: 5px;
+}
+
 .project-container {
   display: grid;
   grid-template-columns: repeat(2, minmax(250px, 1fr));
-  grid-template-rows: repeat(3, 180px);
+  grid-template-rows: repeat(3, 175px);
   gap: 20px;
 }
+
 h1{
   font-size: 22px;
 }
 
 .card{
   background-color: rgba(255, 255, 255, 0.80);
-  border: none;
-  border-radius: 7px;
-
+  
   padding: 15px;
+  
+  border-left: 7px solid orange;
+  border-radius: 7px;
 }
 
 h2{
@@ -211,9 +221,56 @@ h2{
   font-size: 14px;
 }
 
+.share-icons{
+  display: grid;
+  grid-template-columns: repeat(3, 28px);
+  column-gap: 10px;
+  justify-content: end;
+  padding-top: 30px;
+  color: rgb(41, 41, 41);
+}
+
+.share-icons>a:visited{
+  color: rgb(41, 41, 41);
+}
+
+.card-words.squished{
+  font-size: 12px;
+}
 
 .card-squished{
-  height: 70px;
+  height: 65px;
+}
+
+.trending-container>.card-squished{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+.trend-words{
+  padding-top: 20px;
+}
+
+h3{
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.app-name{
+  font-size: 12px;
+  font-weight: 400;
+  color: rgb(155, 154, 154);
+}
+
+.card-squished>img{
+  border-radius: 50%;
+  width: 40px;
+
+  padding-top: 15px;
+}
+
+.card-squished.not-last{
+  border-bottom: solid 1px rgb(194, 194, 194);
 }
 
 .right-snip{
@@ -223,7 +280,17 @@ h2{
 
 .announce-container, .trending-container{
   background-color: rgba(255, 255, 255, 0.50);
-
-  border: 1px solid;
+  padding: 12px 30px 5px 30px;
+  border: none;
   border-radius: 7px;
+}
+
+h2.side{
+  font-size: 14px;
+  font-weight: 500;
+}
+
+#trending{
+  padding-top: 15px;
+  padding-bottom: 10px;
 }
